html tabs content modified

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </section>
       <!--banner section end-->
       <!--event section start-->
-      <section>
+      <section class="event">
         <div class="wrapper">
           <ul class="event-content">
             <!-- Event Image -->
@@ -103,20 +103,22 @@
               </figure>
             </li>
             <!-- Event Description -->
-            <li class="event-description">
-              <h3>world ocean summit 2017</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ipsum sed
-                soluta cum impedit ratione, commodi beatae animi dolorum provident...
-              </p>
-              <ul class="event-button">
-                <li>
-                  <a href="#FIXME" class="button" title="Read More">read more</a>
-                </li>
-                <li>
-                  <a href="#FIXME" class="button" title="Book Now">book now</a>
-                </li>
-              </ul>
+            <li>
+              <div class="event-description">
+                <h3>world ocean summit 2017</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ipsum sed
+                  soluta cum impedit ratione, commodi beatae animi dolorum provident...
+                </p>
+                <ul class="event-button">
+                  <li>
+                    <a href="#FIXME" class="button" title="Read More">read more</a>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button" title="Book Now">book now</a>
+                  </li>
+                </ul>
+              </div>
               <ul class="event-venue">
                 <li>
                   <a href="#FIXME" title="Location" class="location">location</a>
@@ -142,7 +144,7 @@
           <!-- Articles tabs -->         
           <ul class="articles-content">
             <li class="tabs">
-              <ul class="tabs-content">
+              <ul class="links-content">
                 <li class="link active-tab">
                   <a href="#tab1" title="Tab One">
                     <span>saving corals</span>
@@ -207,16 +209,16 @@
                 </ul>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -232,16 +234,15 @@
                 </ul>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste.
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -256,7 +257,7 @@
                   </li>                  
                 </ul>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                  expedita dolor deserunt illo repellendus Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
                 </p>
@@ -266,7 +267,7 @@
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -282,16 +283,16 @@
                 </ul>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -307,16 +308,15 @@
                 </ul>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                   expedita dolor deserunt illo endus veniam ad alias doloremque excepturi...
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -331,17 +331,17 @@
                   </li>                  
                 </ul>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                  consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -362,11 +362,11 @@
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -383,15 +383,15 @@
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
                    expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
-                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                   expedita dolor deserunt veniam ad alias doloremque excepturi...
                 </p>
                 <ul class="tab-links">
                   <li>
-                    <a href="#FIXME" class="cpoy">copy</a>
+                    <a href="#FIXME" class="copy">copy</a>
                     <span>economist intelligence unit</span>
                   </li>
                   <li>
-                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                    <a href="#FIXME" class="button tab-button" title="read more">read more</a>
                   </li>
                 </ul>
               </div>
@@ -404,7 +404,7 @@
       <section class="infographic">
         <div class="wrapper">
           <div class="section-title">
-            <h4>featured articles</h4>
+            <h4>infographic</h4>
             <span class="underline">line</span>
           </div>
           <!-- Carousel start -->
@@ -414,7 +414,7 @@
               <figure>
                 <img src="https://via.placeholder.com/445x500.png?text=slide+one" alt="Slide One">
               </figure>
-              <div class="slide_content">
+              <div class="slide-content">
                 <span class="up bold">the see-through sea</span>
                 <p>if the ocean were transperent, what would humans see?</p>
                 <div>
@@ -427,7 +427,7 @@
               <figure>
                 <img src="https://via.placeholder.com/445x500.png?text=slide+two" alt="Slide Two">
               </figure>
-              <div class="slide_content">
+              <div class="slide-content">
                 <span class="up bold">the see-through sea</span>
                 <p>if the ocean were transperent, what would humans see?</p>
                 <div>
@@ -440,7 +440,7 @@
               <figure>
                 <img src="https://via.placeholder.com/445x500.png?text=slide+three" alt="Slide Three">
               </figure>
-              <div class="slide_content">
+              <div class="slide-content">
                 <span class="up bold">the see-through sea</span>
                 <p>if the ocean were transperent, what would humans see?</p>
                 <div>
@@ -453,7 +453,7 @@
               <figure>
                 <img src="https://via.placeholder.com/445x500.png?text=slide+four" alt="Slide Four">
               </figure>
-              <div class="slide_content">
+              <div class="slide-content">
                 <span class="up bold">the see-through sea</span>
                 <p>if the ocean were transperent, what would humans see?</p>
                 <div>
@@ -465,7 +465,7 @@
           <!-- Carousel End -->
           <!-- Slider Bar Start -->
           <ul class="slider-bar">
-            <li class="bar bar-one">
+            <li class="bar bar-one active-bar">
               <span>slide-bar</span>
             </li>
             <li class="bar bar-two">
@@ -508,7 +508,7 @@
           </h6>         
         </div>
         <!-- Social Links -->
-        <div>
+        <div class="right-links">
           <ul class="social-links">
             <li>
               <a href="#FIXME" class="facebook" title="Facebook">facebook</a>
